Test/MFCFriendlyDriverGeneratorTest/resource/contain_comment.rc
// comment
// comment2
// #define comment
#if defined(comment)
// error
#endif
end